--- a/RevisionesApp/app/src/main/res/layout/activity_login.xml
+++ b/RevisionesApp/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:src="@drawable/desconocido"
+        android:src="@drawable/elenco"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="85dp"
